--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         #game-board {
             display: grid;
             gap: 2px;
-            margin-bottom: 20px;
+            margin: 20px;
             background-image: url("./image/youri_back.png");
             background-size: contain;
         }
