--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             display: grid;
             gap: 2px;
             margin: 20px;
+            padding: 20px;
             background-image: url("./image/youri_back.png");
             background-size: contain;
         }
