--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <select id="size-select">
                 <option value="6">S (6x6)</option>
                 <option value="12">M (12x12)</option>
-                <option value="18" default>L (18x18)</option>
+                <option value="18" selected>L (18x18)</option>
             </select>
             <button id="start-over">Start Over</button>
         </div>
