--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
             </select>
             <button id="start-over">Start Over</button>
         </div>
-        <div id="game-board">
-        </div>
+        <tr style="padding: 10px;">
+            <div id="game-board">
+            </div>
+        </tr>
         <p class="information"><span id="count">がんばれ！</span></p>
         <p class="information"> <span id="nowScore">がんばれ！</span></p>
         <p class="information">スコア: <span id="score">0</span></p>
