--- a/index.html
+++ b/index.html
@@ -62,14 +62,12 @@
             </select>
             <button id="start-over">Start Over</button>
         </div>
-        <tr style="padding: 10px;">
-            <td></td>
-            <td>
-                <div id="game-board">
-                </div>
-            </td>
-            <td></td>
-        </tr>
+        <div style="padding: 10px;">
+            <div></div>
+            <div id="game-board">
+            </div>
+            <div></div>
+        </div>
         <p class="information"><span id="count">がんばれ！</span></p>
         <p class="information"> <span id="nowScore">がんばれ！</span></p>
         <p class="information">スコア: <span id="score">0</span></p>
