--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             margin-bottom: 20px;
             background-image: url("./image/youri_back.png");
             background-size: contain;
+            max-width: 100%;
         }
         .cell {
             width: 40px;
