--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin-bottom: 20px;
             background-image: url("./image/youri_back.png");
             background-size: contain;
-            max-width: 100%;
+            overflow: scroll;
         }
         .cell {
             width: 40px;
