--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            position: relative;
         }
         #game-board {
             display: grid;
@@ -16,7 +17,8 @@
             margin-bottom: 20px;
             background-image: url("./image/youri_back.png");
             background-size: contain;
-            overflow: scroll;
+            position: absolute;
+            left: 50%;
         }
         .cell {
             width: 40px;
