--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
     </style>
 </head>
-<body style="min-width: none;">
+<body style="min-width: 300px;">
     <div id="game-container">
         <h1>柊木悠利さめがめ（サイズ選択・効果音付き）</h1>
         <div id="controls">
