--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             margin-bottom: 20px;
             background-image: url("./image/youri_back.png");
             background-size: contain;
+            max-width: 100%;
         }
         .cell {
             width: 40px;
@@ -52,7 +53,7 @@
         }
     </style>
 </head>
-<body style="min-width: 300px;">
+<body>
     <div id="game-container">
         <h1>柊木悠利さめがめ（サイズ選択・効果音付き）</h1>
         <div id="controls">
