--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         function renderBoard() {
             const gameBoard = document.getElementById('game-board');
             gameBoard.innerHTML = '';
-            gameBoard.style.gridTemplateColumns = `repeat(${BOARD_SIZE}, 40px)`;
+            gameBoard.style.gridTemplateColumns = `repeat(${BOARD_SIZE}, auto)`;
             for (let i = 0; i < BOARD_SIZE; i++) {
                 for (let j = 0; j < BOARD_SIZE; j++) {
                     const cell = document.createElement('img');
