--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             flex-direction: column;
             align-items: center;
             position: relative;
+            max-width: 100%;
         }
         #game-board {
             display: grid;
