--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
     </style>
 </head>
-<body style="max-width: 100%;">
+<body style="max-width: 100%; -webkit-text-size-ajust: 100%;">
     <div id="game-container">
         <h1>柊木悠利さめがめ（サイズ選択・効果音付き）</h1>
         <div id="controls">
