--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             background-image: url("./image/youri_back.png");
             background-size: contain;
             max-width: 100%;
+            min-content: 0;
         }
         .cell {
             width: 40px;
