--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
     </style>
 </head>
-<body style="max-width: 100%; -webkit-text-size-adjust: 100%;">
+<body style="max-width: 100%; -webkit-text-size-adjust: 100%;min-content: 0;">
     <div id="game-container">
         <h1>柊木悠利さめがめ（サイズ選択・効果音付き）</h1>
         <div id="controls">
