--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             min-content: 0;
         }
         .cell {
-            width: 40px;
-            height: 40px;
+            width: 100%;
+            height: auto;
             <!--border: 1px solid #000;-->
             display: flex;
             justify-content: center;
