--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         .cell {
             width: 100%;
             height: auto;
+            max-width: 40px;
             <!--border: 1px solid #000;-->
             display: flex;
             justify-content: center;
