--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>柊木悠利さめがめ（サイズ選択・効果音付き）</title>
+    <title>柊木悠利さめがめ</title>
 </head>
 <body>
     <div id="game-container">
-        <h1>柊木悠利さめがめ（サイズ選択・効果音付き）</h1>
+        <h1>柊木悠利さめがめ</h1>
         <div id="controls">
             <select id="size-select">
                 <option value="6">S (6x6)</option>
