--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         <p class="information"> <span id="nowScore">がんばれ！</span></p>
         <p class="information">スコア: <span id="score">0</span></p>
     </div>
+    
+    <div id="result-bg"></div>
+    <div id="result">
+        <div class="result-content">
+            <div class="result-header">
+                <h1>結果</h1>
+                <span id="result-close">&times;</span>
+            </div>
+            <div class="result-body">
+                <p id="resultPoint">スコアは777点だよ！</p>
+            </div>
+        </div>
+    </div>
     <div hidden>
         <img id="youriStage" src="./image/youri_stage.png">
     </div>
