--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="game-header">
             <!-- はじめからボタン -->
             <div style="flex-direction: column;">
-                <div>
+                <div style="text-align: center;">
                     <img id="youri" src="./image/youri/youri_magao.png" value="0"/>
                 </div>
                 <div>
