--- a/index.html
+++ b/index.html
@@ -46,35 +46,35 @@
             <div id="blue-count">
                 <img src="./image/puzzle/youri_blue.png"/>
                 <div class="count-view">
-                    <p class="right" id="blue-count-view">99</p><p>人</p>
+                    <p class="right" id="blue-count-view">99</p><p class="unit">人</p>
                 </div>
             </div>
             <div id="yellow-count">
                 <img src="./image/puzzle/youri_yellow.png"/>
                 <div class="count-view">
-                    <p class="right" id="yellow-count-view">99</p><p>コ</p>
+                    <p class="right" id="yellow-count-view">99</p><p class="unit">コ</p>
                 </div>
             </div>
             <div id="red-count">
                 <img src="./image/puzzle/youri_red.png"/>
                 <div class="count-view">
-                    <p class="right" id="red-count-view">99</p><p>体</p>
+                    <p class="right" id="red-count-view">99</p><p class="unit">体</p>
                 </div>
             </div>
             <div id="pink-count">
                 <img src="./image/puzzle/youri_pink.png"/>
                 <div class="count-view">
-                    <p class="right" id="pink-count-view">99</p><p>羽</p>
+                    <p class="right" id="pink-count-view">99</p><p class="unit">羽</p>
                 </div>
             </div>
             <div id="green-count">
                 <img src="./image/puzzle/youri_green.png"/>
                 <div class="count-view">
-                    <p class="right" id="green-count-view">99</p><p>匹</p>
+                    <p class="right" id="green-count-view">99</p><p class="unit">匹</p>
                 </div>
             </div>
             <div id="total-count">
-                Total
+                <p class="unit" style="margin: 0;">total</p>
                 <div class="count-view">
                     <span>:</span>
                     <p id="total-count-view">99</p>
