--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Total Score -->
             <div id="total-score-area">
                 <div id="total-score"><p>total score</p></div>
-                <div id="score-div"><p class="information"><span id="score">0</span>点</p></div>
+                <div id="score-div"><p class="information"><span id="score">0</span>&thinsp;点</p></div>
             </div>
         </div>
         
