--- a/index.html
+++ b/index.html
@@ -44,33 +44,33 @@
         <!-- 個数カウント -->
         <div id="count">
             <div id="blue-count">
-                <img src="./image/puzzle/youri_blue.png"/>
+                <img src="./image/puzzle/youri.png"/>
                 <div class="count-view">
-                    <p class="right" id="blue-count-view">99</p><p class="unit">人</p>
+                    <p class="right" id="youri-count-view">99</p><p class="unit">人</p>
                 </div>
             </div>
             <div id="yellow-count">
-                <img src="./image/puzzle/youri_yellow.png"/>
+                <img src="./image/puzzle/ribbon.png"/>
                 <div class="count-view">
-                    <p class="right" id="yellow-count-view">99</p><p class="unit">コ</p>
+                    <p class="right" id="ribbon-count-view">99</p><p class="unit">コ</p>
                 </div>
             </div>
             <div id="red-count">
-                <img src="./image/puzzle/youri_red.png"/>
+                <img src="./image/puzzle/fox.png"/>
                 <div class="count-view">
-                    <p class="right" id="red-count-view">99</p><p class="unit">体</p>
+                    <p class="right" id="fox-count-view">99</p><p class="unit">体</p>
                 </div>
             </div>
             <div id="pink-count">
-                <img src="./image/puzzle/youri_pink.png"/>
+                <img src="./image/puzzle/bird.png"/>
                 <div class="count-view">
-                    <p class="right" id="pink-count-view">99</p><p class="unit">羽</p>
+                    <p class="right" id="bird-count-view">99</p><p class="unit">羽</p>
                 </div>
             </div>
             <div id="green-count">
-                <img src="./image/puzzle/youri_green.png"/>
+                <img src="./image/puzzle/cat.png"/>
                 <div class="count-view">
-                    <p class="right" id="green-count-view">99</p><p class="unit">匹</p>
+                    <p class="right" id="cat-count-view">99</p><p class="unit">匹</p>
                 </div>
             </div>
             <div id="total-count">
@@ -85,8 +85,8 @@
             <div id="controls">
                 <select id="size-select">
                     <!--<option value="6">S (6x6)</option>-->
-                    <option value="12">さくら (12x12)</option>
-                    <option value="18">うめ (18x18)</option>
+                    <option value="12,12,sakura">さくら (12x12)</option>
+                    <option value="18,13,ume">うめ (18x13)</option>
                 </select>
             </div>
             <!-- ステージ -->
