--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </select>
             </div>
             <!-- ステージ -->
-            <div>
+            <div style="text-align: right;">
                 <p class="information">stage <span id="stage">1</span></p>
             </div>
         </div>
