--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <title>ゆーりのさめがめセイム</title>
+  <title>ゆーりのさめさめパズル</title>
 </head>
 <body>
   <div id="game-container">
-    <h1>ゆーりのさめがめセイム</h1>
+    <img src="./image/title.png" style="max-width: 200px;"/>
     
     <div id="game-header">
       <!-- はじめからボタン -->
@@ -35,7 +35,7 @@
       
       <!-- Total Score -->
       <div id="total-score-area">
-        <div id="total-score"><p>total score</p></div>
+        <div id="total-score"><b>total score</b></div>
         <div id="score-div"><p class="information"><span id="score">0</span>&thinsp;点</p></div>
       </div>
     </div>
@@ -100,12 +100,6 @@
           うめ (18x13)
         </label>
       </fieldset>
-      <div id="controls" style="display: none;">
-        <select>
-          <option value="12,12,sakura">さくら (12x12)</option>
-          <option value="18,13,ume">うめ (18x13)</option>
-        </select>
-      </div>
       <!-- ステージ -->
       <div style="text-align: right;">
         <p class="information">stage <span id="stage">1</span></p>
