--- a/index.html
+++ b/index.html
@@ -36,8 +36,15 @@
       
       <!-- Total Score -->
       <div id="total-score-area">
-        <div id="total-score"><b>total score</b></div>
+        <div id="total-score">
+          <div>
+            <b>total score</b>
+          </div>
+        </div>
         <div id="score-div"><p class="information"><span id="score">0</span>&thinsp;点</p></div>
+      </div>
+      <div id="prev-button-area">
+        <img id="prev-button" src="./image/prev.png"/>
       </div>
     </div>
     
