--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
       <!-- Total Score -->
       <div id="total-score-area">
         <div id="total-score">
-          <div id="prev-button-area">
-            <img id="prev-button" src="./image/prev.png"/>
-          </div>
           <div>
             <b>total score</b>
           </div>
@@ -97,7 +94,7 @@
         </div>
       </div>
     </div>
-    <div style="display: flex; align-items: baseline;">
+    <div style="display: flex; margin-top: 10px;">
       <fieldset id="size-select">
         <input id="item-1" class="radio-inline__input" type="radio" name="stage-select" checked="checked" value="12,12,sakura"/>
         <label class="radio-inline__label" for="item-1">
@@ -108,6 +105,9 @@
           うめ (18x13)
         </label>
       </fieldset>
+      <div id="prev-button-area">
+        <img id="prev-button" src="./image/prev.png"/>
+      </div>
       <!-- ステージ -->
       <div style="text-align: right;">
         <p class="information">stage <span id="stage">1</span></p>
