--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
           うめ (18x13)
         </label>
       </fieldset>
+      <!-- ステージ -->
+      <div style="text-align: right; margin-right: 30px">
+        <p class="information">stage <span id="stage">1</span></p>
+      </div>
       <div id="prev-button-area">
         <img id="prev-button" src="./image/prev.png"/>
-      </div>
-      <!-- ステージ -->
-      <div style="text-align: right;">
-        <p class="information">stage <span id="stage">1</span></p>
       </div>
     </div>
   </div>
