--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <div id="fukidashi">
         <img src="./image/fukidashi.png"/>
         <p class="information" id="countSelect_p">
-          <span id="countSelect" style="display: inline-block;width: 300px; text-align: center;">がんばれ！</span>
+          <span id="countSelect" style="display: inline-block;width: 300px; text-align: center;">ようこそさめさめへ！</span>
         </p> 
         <p class="information" id="nowScore_p">
-          <span id="nowScore" style="display: inline-block;width: 300px; text-align: center;">がんばれ！</span>
+          <span id="nowScore" style="display: inline-block;width: 300px; text-align: center;">残り10個以下でクリアだよ！</span>
         </p>
       </div>
       
@@ -125,6 +125,7 @@
       </div>
       <div class="result-body">
         <p id="resultPoint">スコアは777点だよ！</p>
+        <p id="resultPoint2">スコアは777点だよ！</p>
       </div>
     </div>
   </div>
