--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <div id="total-score-area">
         <!-- ステージ -->
         <div id="stage-area">
-          <b class="information">stage </b><span id="stage">1</span>
+          <div id="stage-div">
+            <b class="information">stage</b>
+          </div>
+          <span id="stage">1</span>
         </div>
         <div id="total-score">
           <div>
