--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <div id="prev-prev-cell" value="0"/>
     <div id="prev-score" value="0"/>
     <div id="delete-flag" value="0"/>
+    <div id="delete-after-flag" value="0"/>
   </div>
   <script src="js/samegame.js"></script>
 </body>
