--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
           うめ (18x13)
         </label>
       </fieldset>
+      <div id="voice-button-area">
+        <img id="voice-button" src="./image/youri_voice_on.png" value="0"/>
+      </div>
+      <div id="sound-button-area">
+        <img id="sound-button" src="./image/sound_off_bgm.png" value="0"/>
+      </div>
       <div id="delete-button-area">
         <img id="delete-button" src="./image/pickel.png"/>
       </div>
@@ -144,6 +150,8 @@
     <div id="prev-score" value="0"/>
     <div id="delete-flag" value="0"/>
     <div id="delete-after-flag" value="0"/>
+    <audio id="youri-voice" src=""/>
+    <audio id="bgm" src="./sounds/bgm.wav" loop/>
   </div>
   <script src="js/samegame.js"></script>
 </body>
