--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@
         <p id="resultPoint">スコアは777点だよ！</p>
         <p id="resultPoint2">スコアは777点だよ！</p>
       </div>
+      <!-- <div>
+        ユーザー名:<input type="text" id="user-name"/>
+      </div>
+      <div>
+        <button type="button" onclick="dataCreate()">登録</button>
+      </div> -->
+    </div>
+  </div>
+  
+  <!-- ランキングポップアップ -->
+  <div id="ranking-bg"></div>
+  <div id="ranking">
+    <div class="ranking-content">
+      <div class="ranking-header">
+        <h1>ランキング</h1>
+        <span id="ranking-close">&times;</span>
+      </div>
+      <div class="ranking-body">
+        <ul id="ranking-list"></ul>
+      </div>
     </div>
   </div>
   <!-- 隠し領域 -->
@@ -151,8 +171,9 @@
     <div id="delete-flag" value="0"/>
     <div id="delete-after-flag" value="0"/>
     <audio id="youri-voice" src=""/>
-    <audio id="bgm" src="./sounds/bgm.wav" loop/>
+    <audio id="bgm" src="./sounds/bgm.mp3" loop/>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/samegame.js"></script>
 </body>
 </html>
